oxiplate/tests/crates/escaper-without-default-escaper-group/tests/broken/escaper-without-escaper-group.stderr
error: No fallback escaper group defined and the specified escaper is not "raw". Consider setting a value for `fallback_escaper_group` in `/oxiplate.toml`, or turn on the `built-in-escapers` Oxiplate feature.
 --> tests/broken/escaper-without-escaper-group.rs:4:23
  |
4 | #[oxiplate_inline("{{ text: message }}")]
  |                       ^^^^
